Better handling of modalContainer duration

--- a/example/dist-golden/404.html
+++ b/example/dist-golden/404.html
@@ -7,8 +7,9 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Error 404</title>
 	<base href="/">
-	<link rel="stylesheet" href="/styles.css?cache=1706886990022">
-	<link rel="stylesheet" href="/404.html.css?cache=1706886990022"> <script src="/browser.js?cache=1706886990022" type="module"></script> <script type="module">import { ErrorPage } from '/error-ERIPGT57.js';</script>
+	<link rel="stylesheet" href="/styles.css?cache=1707406214446">
+	<link rel="stylesheet" href="/404.html.css?cache=1707406214446"> <script src="/browser.js?cache=1707406214446" type="module"></script> <script type="module">import { ErrorPage } from '/error-AWBJQVBY.js';</script>
+	<style data-style="l-modalcontainer"></style>
 	<style data-style="l-nav"></style>
 </head>
 
@@ -29,7 +30,7 @@
 	<main is="l-errorpage" data-page-title="Error 404">
 		<h1>404 page :(</h1>
 	</main>
-	<div is="l-modalcontainer" data-duration="0.2" data-transition-state="inactive"></div>
+	<dialog is="l-modalcontainer" data-transition-state="inactive"></dialog>
 </body>
 
 </html>
