--- a/example/dist-golden/index.html
+++ b/example/dist-golden/index.html
@@ -7,8 +7,9 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Home page</title>
 	<base href="/">
-	<link rel="stylesheet" href="/styles.css?cache=1707345317046">
-	<link rel="stylesheet" href="/index.html.css?cache=1707345317046"> <script src="/browser.js?cache=1707345317046" type="module"></script> <script type="module">import { IndexPage } from '/pages-IMNYFLIQ.js';</script>
+	<link rel="stylesheet" href="/styles.css?cache=1707406214484">
+	<link rel="stylesheet" href="/index.html.css?cache=1707406214484"> <script src="/browser.js?cache=1707406214484" type="module"></script> <script type="module">import { IndexPage } from '/pages-OKJQVDC4.js';</script>
+	<style data-style="l-modalcontainer"></style>
 	<style data-style="l-nav"></style>
 	<style data-style="l-textbox"></style>
 	<style data-style="l-progressmodal"></style>
@@ -82,7 +83,7 @@
 		</ol>
 		<div id="jump2">Jump 2</div>
 	</main>
-	<div is="l-modalcontainer" data-duration="0.2" data-transition-state="inactive"></div>
+	<dialog is="l-modalcontainer" data-transition-state="inactive"></dialog>
 </body>
 
 </html>
