--- a/example/dist-golden/ssg/yes/index.html
+++ b/example/dist-golden/ssg/yes/index.html
@@ -7,8 +7,9 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>SSG yes</title>
 	<base href="/">
-	<link rel="stylesheet" href="/styles.css?cache=1706886990077">
-	<link rel="stylesheet" href="/ssg/yes/index.html.css?cache=1706886990077"> <script src="/browser.js?cache=1706886990077" type="module"></script> <script type="module">import { YesSSGPage } from '/ssg-yes-LD33NKQM.js';</script>
+	<link rel="stylesheet" href="/styles.css?cache=1707406214496">
+	<link rel="stylesheet" href="/ssg/yes/index.html.css?cache=1707406214496"> <script src="/browser.js?cache=1707406214496" type="module"></script> <script type="module">import { YesSSGPage } from '/ssg-yes-JFVGHKOK.js';</script>
+	<style data-style="l-modalcontainer"></style>
 	<style data-style="l-nav"></style>
 	<style data-style="l-yesssgpage"></style>
 </head>
@@ -32,7 +33,7 @@
 		<div id="jump1">Jump 1</div>
 		<div id="jump2">Jump 2</div>
 	</main>
-	<div is="l-modalcontainer" data-duration="0.2" data-transition-state="inactive"></div>
+	<dialog is="l-modalcontainer" data-transition-state="inactive"></dialog>
 </body>
 
 </html>
