--- a/example/dist-golden/index.html
+++ b/example/dist-golden/index.html
@@ -7,8 +7,8 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Home page</title>
 	<base href="/">
-	<link rel="stylesheet" href="/styles.css?cache=1707406214484">
-	<link rel="stylesheet" href="/index.html.css?cache=1707406214484"> <script src="/browser.js?cache=1707406214484" type="module"></script> <script type="module">import { IndexPage } from '/pages-OKJQVDC4.js';</script>
+	<link rel="stylesheet" href="/styles.css?cache=1707419023141">
+	<link rel="stylesheet" href="/index.html.css?cache=1707419023141"> <script src="/browser.js?cache=1707419023141" type="module"></script> <script type="module">import { IndexPage } from '/pages-EZITTVDS.js';</script>
 	<style data-style="l-modalcontainer"></style>
 	<style data-style="l-nav"></style>
 	<style data-style="l-textbox"></style>
@@ -83,7 +83,6 @@
 		</ol>
 		<div id="jump2">Jump 2</div>
 	</main>
-	<dialog is="l-modalcontainer" data-transition-state="inactive"></dialog>
 </body>
 
 </html>
