--- a/example/dist-golden/404.html
+++ b/example/dist-golden/404.html
@@ -7,14 +7,14 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Error 404</title>
 	<base href="/">
-	<link rel="stylesheet" href="/styles.css?cache=1710223706183">
-	<link rel="stylesheet" href="/404.html.css?cache=1710223706183"> <script src="/browser.js?cache=1710223706183" type="module"></script> <script type="module">import { ErrorPage } from '/error-5GGJDJR4.js';</script>
+	<link rel="stylesheet" href="/styles.css?cache=1710223939319">
+	<link rel="stylesheet" href="/404.html.css?cache=1710223939319"> <script src="/browser.js?cache=1710223939319" type="module"></script> <script type="module">import { ErrorPage } from '/error-5GGJDJR4.js';</script>
 	<style data-style="l-modalcontainer"></style>
 	<style data-style="l-nav"></style>
 </head>
 
 <body is="l-app" id="UID14_">
-	<nav is="l-nav" id="UID16_">
+	<nav is="l-nav" id="nav">
 		<ul>
 			<li id="nav-error404"> Active: <a href="/404.html">Go error404</a> </li>
 			<li id="nav-external"> <a href="https://example.com/" rel="noopener" target="_blank">Go external</a> </li>
