--- a/example/dist-golden/ssg/yes/index.html
+++ b/example/dist-golden/ssg/yes/index.html
@@ -7,15 +7,15 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>SSG yes</title>
 	<base href="/">
-	<link rel="stylesheet" href="/styles.css?cache=1710223706235">
-	<link rel="stylesheet" href="/ssg/yes/index.html.css?cache=1710223706235"> <script src="/browser.js?cache=1710223706235" type="module"></script> <script type="module">import { YesSSGPage } from '/ssg-yes-2D2P7YGR.js';</script>
+	<link rel="stylesheet" href="/styles.css?cache=1710223939368">
+	<link rel="stylesheet" href="/ssg/yes/index.html.css?cache=1710223939368"> <script src="/browser.js?cache=1710223939368" type="module"></script> <script type="module">import { YesSSGPage } from '/ssg-yes-2D2P7YGR.js';</script>
 	<style data-style="l-modalcontainer"></style>
 	<style data-style="l-nav"></style>
 	<style data-style="l-yesssgpage"></style>
 </head>
 
 <body is="l-app" id="UID14_">
-	<nav is="l-nav" id="UID16_">
+	<nav is="l-nav" id="nav">
 		<ul>
 			<li id="nav-error404"> <a href="/404.html">Go error404</a> </li>
 			<li id="nav-external"> <a href="https://example.com/" rel="noopener" target="_blank">Go external</a> </li>
