rm component.id

--- a/example/dist-golden/404.html
+++ b/example/dist-golden/404.html
@@ -7,14 +7,14 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Error 404</title>
 	<base href="/">
-	<link rel="stylesheet" href="/styles.css?cache=1710223939319">
-	<link rel="stylesheet" href="/404.html.css?cache=1710223939319"> <script src="/browser.js?cache=1710223939319" type="module"></script> <script type="module">import { ErrorPage } from '/error-5GGJDJR4.js';</script>
+	<link rel="stylesheet" href="/styles.css?cache=1710269601790">
+	<link rel="stylesheet" href="/404.html.css?cache=1710269601790"> <script src="/browser.js?cache=1710269601790" type="module"></script> <script type="module">import { ErrorPage } from '/error-6PFS3S3C.js';</script>
 	<style data-style="l-modalcontainer"></style>
 	<style data-style="l-nav"></style>
 </head>
 
-<body is="l-app" id="UID14_">
-	<nav is="l-nav" id="nav">
+<body is="l-app">
+	<nav is="l-nav">
 		<ul>
 			<li id="nav-error404"> Active: <a href="/404.html">Go error404</a> </li>
 			<li id="nav-external"> <a href="https://example.com/" rel="noopener" target="_blank">Go external</a> </li>
@@ -27,7 +27,7 @@
 			<li id="nav-ssgYesJump2"> <a href="/ssg/yes/#jump2">Go ssgYesJump2</a> </li>
 		</ul>
 	</nav>
-	<main is="l-errorpage" id="UID15_" data-page-title="Error 404">
+	<main is="l-errorpage" data-page-title="Error 404">
 		<h1>404 page :(</h1>
 	</main>
 </body>
