--- a/example/dist-golden/index.html
+++ b/example/dist-golden/index.html
@@ -7,8 +7,8 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Home page</title>
 	<base href="/">
-	<link rel="stylesheet" href="/styles.css?cache=1710223939356">
-	<link rel="stylesheet" href="/index.html.css?cache=1710223939356"> <script src="/browser.js?cache=1710223939356" type="module"></script> <script type="module">import { IndexPage } from '/pages-4GZKAALN.js';</script>
+	<link rel="stylesheet" href="/styles.css?cache=1710269601829">
+	<link rel="stylesheet" href="/index.html.css?cache=1710269601829"> <script src="/browser.js?cache=1710269601829" type="module"></script> <script type="module">import { IndexPage } from '/pages-TVR2EE36.js';</script>
 	<style data-style="l-modalcontainer"></style>
 	<style data-style="l-nav"></style>
 	<style data-style="l-textbox"></style>
@@ -17,8 +17,8 @@
 	<style data-style="l-indexpage"></style>
 </head>
 
-<body is="l-app" id="UID14_">
-	<nav is="l-nav" id="nav">
+<body is="l-app">
+	<nav is="l-nav">
 		<ul>
 			<li id="nav-error404"> <a href="/404.html">Go error404</a> </li>
 			<li id="nav-external"> <a href="https://example.com/" rel="noopener" target="_blank">Go external</a> </li>
@@ -31,33 +31,35 @@
 			<li id="nav-ssgYesJump2"> <a href="/ssg/yes/#jump2">Go ssgYesJump2</a> </li>
 		</ul>
 	</nav>
-	<main is="l-indexpage" id="UID19_" data-page-title="Home page" data-message="This is a variable" data-on-click="" data-on-onadd="" data-on-ondelete="" data-on-oninput="">
+	<main is="l-indexpage" data-page-title="Home page" data-message="This is a variable" data-on-click="" id="UID3_" data-on-onadd="" data-on-ondelete="" data-on-oninput="">
 		<h1>Hello world!</h1>
-		<div is="l-transitiontest" id="transitionTest" style="background: rgb(255, 0, 0);"></div><button data-emit-click-uid19_="openModal" type="button">Modal</button>
+		<div is="l-transitiontest" style="background: rgb(255, 0, 0);"></div><button data-emit-click-uid3_="openModal" type="button">Modal</button>
 		<div id="jump1">Jump 1</div>
-		<ol is="l-list" id="indexList" data-emit-onadd-uid19_="onAdd" data-emit-ondelete-uid19_="onDelete" data-emit-oninput-uid19_="onInput" data-on-ondelete="" data-on-oninput="" data-on-click="">
-			<li>List ID indexList</li>
-			<li is="l-listitem" id="UID17_" data-text="hello" data-emit-ondelete-indexlist="onDelete|UID17_" data-emit-oninput-indexlist="onInput|UID17_" data-on-oninput="" data-on-click="">
-				<p>List item ID UID17_</p>
-				<div is="l-textbox" id="UID17_-text" data-max="10" data-value="hello" data-emit-oninput-uid17_="onInput" data-on-input=""><input maxlength="10" data-emit-input-uid17_-text="onInput" placeholder="Type here" type="text" value="hello"><span id="UID17_-text-remaining"> 5 / 10 Remaining</span>
-					<p>textbox ID UID17_-text</p>
-				</div> <button data-emit-click-uid17_="onDelete" type="button">Remove</button>
+		<ol is="l-list" data-emit-onadd-uid3_="onAdd" data-emit-ondelete-uid3_="onDelete" data-emit-oninput-uid3_="onInput" data-on-ondelete="" id="UID4_" data-on-oninput="" data-on-click="">
+			<li>List ID </li>
+			<li is="l-listitem" data-text="hello" data-emit-ondelete-uid4_="onDelete|UID1_" data-emit-oninput-uid4_="onInput|UID1_" data-on-oninput="" id="UID5_" data-on-click="">
+				<p>List item ID </p>
+				<div is="l-textbox" data-max="10" data-value="hello" data-emit-oninput-uid5_="onInput" data-on-input="" id="UID6_"><input maxlength="10" data-emit-input-uid6_="onInput" placeholder="Type here" type="text" value="hello"><span id="UID6_-remaining"> 5 / 10 Remaining</span>
+					<p>textbox ID UID6_</p>
+				</div> <button data-emit-click-uid5_="onDelete" type="button">Remove</button>
 			</li>
-			<li is="l-listitem" id="UID18_" data-text="world" data-emit-ondelete-indexlist="onDelete|UID18_" data-emit-oninput-indexlist="onInput|UID18_" data-on-oninput="" data-on-click="">
-				<p>List item ID UID18_</p>
-				<div is="l-textbox" id="UID18_-text" data-max="10" data-value="world" data-emit-oninput-uid18_="onInput" data-on-input=""><input maxlength="10" data-emit-input-uid18_-text="onInput" placeholder="Type here" type="text" value="world"><span id="UID18_-text-remaining"> 5 / 10 Remaining</span>
-					<p>textbox ID UID18_-text</p>
-				</div> <button data-emit-click-uid18_="onDelete" type="button">Remove</button>
+			<li is="l-listitem" data-text="world" data-emit-ondelete-uid4_="onDelete|UID2_" data-emit-oninput-uid4_="onInput|UID2_" data-on-oninput="" id="UID7_" data-on-click="">
+				<p>List item ID </p>
+				<div is="l-textbox" data-max="10" data-value="world" data-emit-oninput-uid7_="onInput" data-on-input="" id="UID8_"><input maxlength="10" data-emit-input-uid8_="onInput" placeholder="Type here" type="text" value="world"><span id="UID8_-remaining"> 5 / 10 Remaining</span>
+					<p>textbox ID UID8_</p>
+				</div> <button data-emit-click-uid7_="onDelete" type="button">Remove</button>
 			</li>
-			<li> <button data-emit-click-indexlist="onAdd" type="button">Add</button> </li>
+			<li> <button data-emit-click-uid4_="onAdd" type="button">Add</button> </li>
 		</ol>
-		<h1>This should be in the source, not browser.</h1>
+		<div class="_swapText">
+			<h1>This should be in the source, not browser.</h1>
+		</div>
 		<h1>Headline 1</h1>
 		<h2>This is a variable</h2>
 		<p>Lorem ipsum dolor <strong>sit amet</strong>, consectetur <em>adipiscing elit</em>, sed do <em>eiusmod tempor</em> incididunt.</p>
 		<p>Duis aute voluptate <a href="https://example.com">velit esse cillum</a> dolore /eu fugiat/ nulla pariatur.</p>
 		<p><a href="/ssg/yes/">Link to SSG Yes</a></p>
-		<p class="type-wtf">abc123</p><button data-emit-click-uid19_="anchorlessRoute" type="button">Go to SSG Yes</button>
+		<p class="type-wtf">abc123</p><button data-emit-click-uid3_="anchorlessRoute" type="button">Go to SSG Yes</button>
 		<h2>Headline 2</h2>
 		<blockquote>
 			<p>Excepteur sint occaecat <em>cupidatat</em> non proident.</p>
