--- a/example/dist-golden/ssg/yes/index.html
+++ b/example/dist-golden/ssg/yes/index.html
@@ -7,15 +7,15 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>SSG yes</title>
 	<base href="/">
-	<link rel="stylesheet" href="/styles.css?cache=1710223939368">
-	<link rel="stylesheet" href="/ssg/yes/index.html.css?cache=1710223939368"> <script src="/browser.js?cache=1710223939368" type="module"></script> <script type="module">import { YesSSGPage } from '/ssg-yes-2D2P7YGR.js';</script>
+	<link rel="stylesheet" href="/styles.css?cache=1710269601841">
+	<link rel="stylesheet" href="/ssg/yes/index.html.css?cache=1710269601841"> <script src="/browser.js?cache=1710269601841" type="module"></script> <script type="module">import { YesSSGPage } from '/ssg-yes-R6SXEIYL.js';</script>
 	<style data-style="l-modalcontainer"></style>
 	<style data-style="l-nav"></style>
 	<style data-style="l-yesssgpage"></style>
 </head>
 
-<body is="l-app" id="UID14_">
-	<nav is="l-nav" id="nav">
+<body is="l-app">
+	<nav is="l-nav">
 		<ul>
 			<li id="nav-error404"> <a href="/404.html">Go error404</a> </li>
 			<li id="nav-external"> <a href="https://example.com/" rel="noopener" target="_blank">Go external</a> </li>
@@ -28,7 +28,7 @@
 			<li id="nav-ssgYesJump2"> <a href="/ssg/yes/#jump2">Go ssgYesJump2</a> </li>
 		</ul>
 	</nav>
-	<main is="l-yesssgpage" id="UID26_" data-page-title="SSG yes">
+	<main is="l-yesssgpage" data-page-title="SSG yes">
 		<h1>SSG yes</h1>
 		<div id="jump1">Jump 1</div>
 		<div id="jump2">Jump 2</div>
