--- a/example/dist-golden/index.html
+++ b/example/dist-golden/index.html
@@ -7,8 +7,8 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Home page</title>
 	<base href="/">
-	<link rel="stylesheet" href="/styles.css?cache=1710443926086">
-	<link rel="stylesheet" href="/index.html.css?cache=1710443926086"> <script src="/browser.js?cache=1710443926086" type="module"></script> <script type="module">import { IndexPage } from '/pages-VXRPEHQM.js';</script>
+	<link rel="stylesheet" href="/styles.css?cache=1710705782391">
+	<link rel="stylesheet" href="/index.html.css?cache=1710705782391"> <script src="/browser.js?cache=1710705782391" type="module"></script> <script type="module">import { IndexPage } from '/pages-S4R7S7W3.js';</script>
 	<style data-style="l-modalcontainer"></style>
 	<style data-style="l-nav"></style>
 	<style data-style="l-textbox"></style>
@@ -17,7 +17,7 @@
 	<style data-style="l-indexpage"></style>
 </head>
 
-<body is="l-app">
+<body is="l-app" data-relay-click="" data-relay-onlistadd="" data-relay-onlistdelete="" data-relay-onlistinput="" data-relay-onlistitemdelete="" data-relay-onlistiteminput="" data-relay-oninput="" data-relay-input="">
 	<nav is="l-nav">
 		<ul>
 			<li id="nav-error404"> <a href="/404.html">Go error404</a> </li>
@@ -31,25 +31,25 @@
 			<li id="nav-ssgYesJump2"> <a href="/ssg/yes/#jump2">Go ssgYesJump2</a> </li>
 		</ul>
 	</nav>
-	<main is="l-indexpage" data-page-title="Home page" data-message="This is a variable" data-on-click="" id="UID7_" data-on-onadd="" data-on-ondelete="" data-on-oninput="">
+	<main is="l-indexpage" data-page-title="Home page" data-message="This is a variable" id="UID13_">
 		<h1>Hello world!</h1>
-		<div is="l-transitiontest" style="background: rgb(255, 0, 0);"></div><button data-emit-click-uid7_="openModal" type="button">Modal</button>
+		<div is="l-transitiontest" style="background: rgb(255, 0, 0);"></div><button data-emit-click-uid13_="UID13_|openModal" type="button">Modal</button>
 		<div id="jump1">Jump 1</div>
-		<ol is="l-list" data-emit-onadd-uid7_="onAdd" data-emit-ondelete-uid7_="onDelete" data-emit-oninput-uid7_="onInput" data-on-ondelete="" id="UID10_" data-on-oninput="" data-on-click="">
+		<ol is="l-list" data-emit-onlistadd-uid13_="UID13_|onAdd" data-emit-onlistdelete-uid13_="UID13_|onDelete" data-emit-onlistinput-uid13_="UID13_|onInput" id="UID16_">
 			<li>List ID </li>
-			<li is="l-listitem" id="UID5_" data-text="hello" data-emit-ondelete-uid10_="onDelete|UID5_" data-emit-oninput-uid10_="onInput|UID5_" data-on-oninput="" data-on-click="">
-				<p>List item ID UID5_</p>
-				<div is="l-textbox" data-max="10" data-value="hello" data-emit-oninput-uid5_="onInput" data-on-input="" id="UID12_"><input maxlength="10" data-emit-input-uid12_="onInput" placeholder="Type here" type="text" value="hello"><span id="UID12_-remaining"> 5 / 10 Remaining</span>
-					<p>textbox ID UID12_</p>
-				</div> <button data-emit-click-uid5_="onDelete" type="button">Remove</button>
+			<li is="l-listitem" id="UID11_" data-text="hello" data-emit-onlistitemdelete-uid16_="UID16_|onListDelete|UID11_" data-emit-onlistiteminput-uid16_="UID16_|onListInput|UID11_">
+				<p>List item ID UID11_</p>
+				<div is="l-textbox" data-max="10" data-value="hello" data-emit-oninput-uid11_="UID11_|onListItemInput" id="UID18_"><input maxlength="10" data-emit-input-uid18_="UID18_|onInput" placeholder="Type here" type="text" value="hello"><span id="UID18_-remaining"> 5 / 10 Remaining</span>
+					<p>textbox ID UID18_</p>
+				</div> <button data-emit-click-uid11_="UID11_|onListItemDelete" type="button">Remove</button>
 			</li>
-			<li is="l-listitem" id="UID6_" data-text="world" data-emit-ondelete-uid10_="onDelete|UID6_" data-emit-oninput-uid10_="onInput|UID6_" data-on-oninput="" data-on-click="">
-				<p>List item ID UID6_</p>
-				<div is="l-textbox" data-max="10" data-value="world" data-emit-oninput-uid6_="onInput" data-on-input="" id="UID14_"><input maxlength="10" data-emit-input-uid14_="onInput" placeholder="Type here" type="text" value="world"><span id="UID14_-remaining"> 5 / 10 Remaining</span>
-					<p>textbox ID UID14_</p>
-				</div> <button data-emit-click-uid6_="onDelete" type="button">Remove</button>
+			<li is="l-listitem" id="UID12_" data-text="world" data-emit-onlistitemdelete-uid16_="UID16_|onListDelete|UID12_" data-emit-onlistiteminput-uid16_="UID16_|onListInput|UID12_">
+				<p>List item ID UID12_</p>
+				<div is="l-textbox" data-max="10" data-value="world" data-emit-oninput-uid12_="UID12_|onListItemInput" id="UID20_"><input maxlength="10" data-emit-input-uid20_="UID20_|onInput" placeholder="Type here" type="text" value="world"><span id="UID20_-remaining"> 5 / 10 Remaining</span>
+					<p>textbox ID UID20_</p>
+				</div> <button data-emit-click-uid12_="UID12_|onListItemDelete" type="button">Remove</button>
 			</li>
-			<li> <button data-emit-click-uid10_="onAdd" type="button">Add</button> </li>
+			<li> <button data-emit-click-uid16_="UID16_|onListAdd" type="button">Add</button> </li>
 		</ol>
 		<div class="_swapText">
 			<h1>This should be in the source, not browser.</h1>
@@ -59,7 +59,7 @@
 		<p>Lorem ipsum dolor <strong>sit amet</strong>, consectetur <em>adipiscing elit</em>, sed do <em>eiusmod tempor</em> incididunt.</p>
 		<p>Duis aute voluptate <a href="https://example.com">velit esse cillum</a> dolore /eu fugiat/ nulla pariatur.</p>
 		<p><a href="/ssg/yes/">Link to SSG Yes</a></p>
-		<p class="type-wtf">abc123</p><button data-emit-click-uid7_="anchorlessRoute" type="button">Go to SSG Yes</button>
+		<p class="type-wtf">abc123</p><button data-emit-click-uid13_="UID13_|anchorlessRoute" type="button">Go to SSG Yes</button>
 		<h2>Headline 2</h2>
 		<blockquote>
 			<p>Excepteur sint occaecat <em>cupidatat</em> non proident.</p>
