Fix bug with not all relay- attrs being removed

--- a/example/dist-golden/ssg/yes/index.html
+++ b/example/dist-golden/ssg/yes/index.html
@@ -7,14 +7,14 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>SSG yes</title>
 	<base href="/">
-	<link rel="stylesheet" href="/styles.css?cache=1710705782404">
-	<link rel="stylesheet" href="/ssg/yes/index.html.css?cache=1710705782404"> <script src="/browser.js?cache=1710705782404" type="module"></script> <script type="module">import { YesSSGPage } from '/ssg-yes-V443SF74.js';</script>
+	<link rel="stylesheet" href="/styles.css?cache=1710732789001">
+	<link rel="stylesheet" href="/ssg/yes/index.html.css?cache=1710732789001"> <script src="/browser.js?cache=1710732789001" type="module"></script> <script type="module">import { YesSSGPage } from '/ssg-yes-VEVVVLGP.js';</script>
 	<style data-style="l-modalcontainer"></style>
 	<style data-style="l-nav"></style>
 	<style data-style="l-yesssgpage"></style>
 </head>
 
-<body is="l-app" data-relay-input="">
+<body is="l-app">
 	<nav is="l-nav">
 		<ul>
 			<li id="nav-error404"> <a href="/404.html">Go error404</a> </li>
