Allow casing in event names

--- a/example/dist-golden/index.html
+++ b/example/dist-golden/index.html
@@ -7,8 +7,8 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Home page</title>
 	<base href="/">
-	<link rel="stylesheet" href="/styles.css?cache=1710757127133">
-	<link rel="stylesheet" href="/index.html.css?cache=1710757127133"> <script src="/browser.js?cache=1710757127133" type="module"></script> <script type="module">import { IndexPage } from '/pages-4QJVUIH4.js';</script>
+	<link rel="stylesheet" href="/styles.css?cache=1711083981927">
+	<link rel="stylesheet" href="/index.html.css?cache=1711083981927"> <script src="/browser.js?cache=1711083981927" type="module"></script> <script type="module">import { IndexPage } from '/pages-4DSNGWAY.js';</script>
 	<style data-style="l-modalcontainer"></style>
 	<style data-style="l-nav"></style>
 	<style data-style="l-textbox"></style>
@@ -17,7 +17,7 @@
 	<style data-style="l-indexpage"></style>
 </head>
 
-<body is="l-app" data-relay-click="" data-relay-onlistadd="" data-relay-onlistdelete="" data-relay-onlistinput="" data-relay-onlistitemdelete="" data-relay-onlistiteminput="" data-relay-oninput="" data-relay-input="">
+<body is="l-app" data-relay-click="click" data-relay-onlistadd="onListAdd" data-relay-onlistdelete="onListDelete" data-relay-onlistinput="onListInput" data-relay-onlistitemdelete="onListItemDelete" data-relay-onlistiteminput="onListItemInput" data-relay-oninput="onInput" data-relay-input="input">
 	<nav is="l-nav">
 		<ul>
 			<li id="nav-error404"> <a href="/404.html">Go error404</a> </li>
@@ -31,23 +31,23 @@
 			<li id="nav-ssgYesJump2"> <a href="/ssg/yes/#jump2">Go ssgYesJump2</a> </li>
 		</ul>
 	</nav>
-	<main is="l-indexpage" data-page-title="Home page" data-message="This is a variable" id="UID13_">
+	<main is="l-indexpage" data-page-title="Home page" data-message="This is a variable" id="UID7_">
 		<h1>Hello world!</h1>
-		<div is="l-transitiontest" style="background: rgb(255, 0, 0);"></div><button data-emit-click-uid13_="UID13_|openModal" type="button">Modal</button>
+		<div is="l-transitiontest" style="background: rgb(255, 0, 0);"></div><button data-emit-click-uid7_="UID7_|openModal" type="button">Modal</button>
 		<div id="jump1">Jump 1</div>
-		<ol is="l-list" id="indexList" data-emit-onlistadd-uid13_="UID13_|onAdd" data-emit-onlistdelete-uid13_="UID13_|onDelete" data-emit-onlistinput-uid13_="UID13_|onInput">
+		<ol is="l-list" id="indexList" data-emit-onlistadd-uid7_="UID7_|onAdd" data-emit-onlistdelete-uid7_="UID7_|onDelete" data-emit-onlistinput-uid7_="UID7_|onInput">
 			<li>List ID indexList</li>
-			<li is="l-listitem" id="UID11_" data-text="hello" data-emit-onlistitemdelete-indexlist="indexList|onListDelete|UID11_" data-emit-onlistiteminput-indexlist="indexList|onListInput|UID11_">
-				<p>List item ID UID11_</p>
-				<div is="l-textbox" data-max="10" data-value="hello" data-emit-oninput-uid11_="UID11_|onListItemInput" id="UID16_"><input maxlength="10" data-emit-input-uid16_="UID16_|onInput" placeholder="Type here" type="text" value="hello"><span id="UID16_-remaining"> 5 / 10 Remaining</span>
-					<p>textbox ID UID16_</p>
-				</div> <button data-emit-click-uid11_="UID11_|onListItemDelete" type="button">Remove</button>
+			<li is="l-listitem" id="UID5_" data-text="hello" data-emit-onlistitemdelete-indexlist="indexList|onListDelete|UID5_" data-emit-onlistiteminput-indexlist="indexList|onListInput|UID5_">
+				<p>List item ID UID5_</p>
+				<div is="l-textbox" data-max="10" data-value="hello" data-emit-oninput-uid5_="UID5_|onListItemInput" id="UID10_"><input maxlength="10" data-emit-input-uid10_="UID10_|onInput" placeholder="Type here" type="text" value="hello"><span id="UID10_-remaining"> 5 / 10 Remaining</span>
+					<p>textbox ID UID10_</p>
+				</div> <button data-emit-click-uid5_="UID5_|onListItemDelete" type="button">Remove</button>
 			</li>
-			<li is="l-listitem" id="UID12_" data-text="world" data-emit-onlistitemdelete-indexlist="indexList|onListDelete|UID12_" data-emit-onlistiteminput-indexlist="indexList|onListInput|UID12_">
-				<p>List item ID UID12_</p>
-				<div is="l-textbox" data-max="10" data-value="world" data-emit-oninput-uid12_="UID12_|onListItemInput" id="UID18_"><input maxlength="10" data-emit-input-uid18_="UID18_|onInput" placeholder="Type here" type="text" value="world"><span id="UID18_-remaining"> 5 / 10 Remaining</span>
-					<p>textbox ID UID18_</p>
-				</div> <button data-emit-click-uid12_="UID12_|onListItemDelete" type="button">Remove</button>
+			<li is="l-listitem" id="UID6_" data-text="world" data-emit-onlistitemdelete-indexlist="indexList|onListDelete|UID6_" data-emit-onlistiteminput-indexlist="indexList|onListInput|UID6_">
+				<p>List item ID UID6_</p>
+				<div is="l-textbox" data-max="10" data-value="world" data-emit-oninput-uid6_="UID6_|onListItemInput" id="UID12_"><input maxlength="10" data-emit-input-uid12_="UID12_|onInput" placeholder="Type here" type="text" value="world"><span id="UID12_-remaining"> 5 / 10 Remaining</span>
+					<p>textbox ID UID12_</p>
+				</div> <button data-emit-click-uid6_="UID6_|onListItemDelete" type="button">Remove</button>
 			</li>
 			<li> <button data-emit-click-indexlist="indexList|onListAdd" type="button">Add</button> </li>
 		</ol>
@@ -59,7 +59,7 @@
 		<p>Lorem ipsum dolor <strong>sit amet</strong>, consectetur <em>adipiscing elit</em>, sed do <em>eiusmod tempor</em> incididunt.</p>
 		<p>Duis aute voluptate <a href="https://example.com">velit esse cillum</a> dolore /eu fugiat/ nulla pariatur.</p>
 		<p><a href="/ssg/yes/">Link to SSG Yes</a></p>
-		<p class="type-wtf">abc123</p><button data-emit-click-uid13_="UID13_|anchorlessRoute" type="button">Go to SSG Yes</button>
+		<p class="type-wtf">abc123</p><button data-emit-click-uid7_="UID7_|anchorlessRoute" type="button">Go to SSG Yes</button>
 		<h2>Headline 2</h2>
 		<blockquote>
 			<p>Excepteur sint occaecat <em>cupidatat</em> non proident.</p>
