--- a/example/dist-golden/index.html
+++ b/example/dist-golden/index.html
@@ -7,8 +7,8 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Home page</title>
 	<base href="/">
-	<link rel="stylesheet" href="/styles.css?cache=1711090101554">
-	<link rel="stylesheet" href="/index.html.css?cache=1711090101554"> <script src="/browser.js?cache=1711090101554" type="module"></script> <script type="module">import { IndexPage } from '/pages-DTNI3DA5.js';</script>
+	<link rel="stylesheet" href="/styles.css?cache=1712670425986">
+	<link rel="stylesheet" href="/index.html.css?cache=1712670425986"> <script src="/browser.js?cache=1712670425986" type="module"></script> <script type="module">import { IndexPage } from '/pages-ICENH5KQ.js';</script>
 	<style data-style="l-modalcontainer"></style>
 	<style data-style="l-nav"></style>
 	<style data-style="l-textbox"></style>
@@ -84,6 +84,7 @@
 			<li> ut aliquip ex</li>
 		</ol>
 		<div id="jump2">Jump 2</div>
+		<div class="_bounce"></div>
 	</main>
 </body>
 
