Move ssg to root module

--- a/example/dist-golden/index.html
+++ b/example/dist-golden/index.html
@@ -7,8 +7,8 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Home page</title>
 	<base href="/">
-	<link rel="stylesheet" href="/styles.css?cache=1712670425986">
-	<link rel="stylesheet" href="/index.html.css?cache=1712670425986"> <script src="/browser.js?cache=1712670425986" type="module"></script> <script type="module">import { IndexPage } from '/pages-ICENH5KQ.js';</script>
+	<link rel="stylesheet" href="/styles.css?cache=1713073690508">
+	<link rel="stylesheet" href="/index.html.css?cache=1713073690508"> <script src="/browser.js?cache=1713073690508" type="module"></script> <script type="module">import { IndexPage } from '/pages-FR2OCYMM.js';</script>
 	<style data-style="l-modalcontainer"></style>
 	<style data-style="l-nav"></style>
 	<style data-style="l-textbox"></style>
@@ -54,35 +54,8 @@
 		<div class="_swapText">
 			<h1>This should be in the source, not browser.</h1>
 		</div>
-		<h1>Headline 1</h1>
-		<h2>This is a variable</h2>
-		<p>Lorem ipsum dolor <strong>sit amet</strong>, consectetur <em>adipiscing elit</em>, sed do <em>eiusmod tempor</em> incididunt.</p>
-		<p>Duis aute voluptate <a href="https://example.com">velit esse cillum</a> dolore /eu fugiat/ nulla pariatur.</p>
 		<p><a href="/ssg/yes/">Link to SSG Yes</a></p>
 		<p class="type-wtf">abc123</p><button data-emit-click-uid7_="anchorlessRoute" type="button">Go to SSG Yes</button>
-		<h2>Headline 2</h2>
-		<blockquote>
-			<p>Excepteur sint occaecat <em>cupidatat</em> non proident.</p>
-		</blockquote>
-		<p>Joseph's coat was red and yellow and green and brown and scarlet.</p>
-		<ul>
-			<li> ut aliquip ex</li>
-			<li> ea commodo consequat.<ul>
-					<li> Duis aute</li>
-					<li> irure dolor in</li>
-				</ul>
-			</li>
-			<li> ut aliquip ex</li>
-		</ul>
-		<ol>
-			<li> ut aliquip ex</li>
-			<li> ea commodo consequat.<ol>
-					<li> Duis aute</li>
-					<li> irure dolor in</li>
-				</ol>
-			</li>
-			<li> ut aliquip ex</li>
-		</ol>
 		<div id="jump2">Jump 2</div>
 		<div class="_bounce"></div>
 	</main>
