--- a/util/browser.spec.html
+++ b/util/browser.spec.html
@@ -2,9 +2,20 @@
 <html lang="en">
 	<head>
 		<title>Specs</title>
+		<style>
+#pointer {
+	background: blue;
+	border-radius: 50%;
+	height: 50px;
+	position: absolute;
+	width: 50px;
+}
+		</style>
 	</head>
 	<body>
 		<p>Specs</p>
+
+		<div id="pointer"></div>
 
 		<script type="module" src="/browser.spec.js"></script>
 	</body>
