Add offsetOrigin and stopPropagation

--- a/util/browser.spec.html
+++ b/util/browser.spec.html
@@ -3,19 +3,13 @@
 	<head>
 		<title>Specs</title>
 		<style>
-#pointer {
-	background: blue;
-	border-radius: 50%;
-	height: 50px;
+svg {
 	position: absolute;
-	width: 50px;
 }
 		</style>
 	</head>
 	<body>
 		<p>Specs</p>
-
-		<div id="pointer"></div>
 
 		<script type="module" src="/browser.spec.js"></script>
 	</body>
